# teachpyx

./: .gitignore  .landscape.yml  .local.jenkins.lin.yml  .local.jenkins.win.yml  .travis.yml  CHANGELOGS.rst  HISTORY.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  appveyor.yml  clean.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_conda.txt  requirements_conda2.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: check-urls.yml  ci-example.yml  ci-notebook.yml  ci.yml  documentation.yml  rstcheck.yml  wheels-any.yml
_data/: README.rst  hugo_dernier_jour_condamne.txt  seance4_excel.csv
_doc/: algorithm_culture.rst  conf.py  defthe_index.rst  glossary.rst  i_ex.rst  i_examples.rst  i_faq.rst  i_index.rst  index.rst  introduction.rst  license.rst  notebook_gallery.rst  sg_execution_times.rst
_doc/api/: classique.rst  datasets.rst  ext_test_case.rst  faqs.rst  index.rst  numpysex.rst  tools.rst
_doc/articles/: 2022-01-01-assurance.rst  2022-11-31-route2022.rst  2022-12-07-cartopy.rst  2023-08-03-code-jam.rst  2023-08-09-hermionne copy.rst  2023-09-05-route2022.rst  2023-09-06-ensae.rst  2023-11-31-route2023.rst  index.rst
_doc/c_classes/: classes.rst  questions.rst
_doc/c_data/: dataframes.rst  enedis_cartes.ipynb  graphes.rst  i_exda.rst  index.rst  matrices.rst  nb_array.ipynb  nb_dataframe.ipynb  nb_dataframe__.ipynb  nb_dataframe_matrix_speed.ipynb  nb_numpy.ipynb  nb_pandas.ipynb  nb_pandas_cube.ipynb  numpy_broadcast.ipynb
_doc/c_exception/: exception.rst  exception_ext.rst
_doc/c_expose/: index.rst
_doc/c_gui/: index.rst  tkinter.rst
_doc/c_lang/: collections.rst  constructions.rst  dates.rst  faq.rst  index.rst  syntaxe.rst  types.rst
_doc/c_ml/: index.rst  rappel.rst  regclass.rst
_doc/c_module/: files.rst  index.rst  module.rst  serialization.rst
_doc/c_parallelisation/: index.rst  thread.rst
_doc/c_regex/: regex.rst
_doc/c_resume/: cheat_sheet.rst  conseil_programmes.rst  git.rst  index.rst  jenkins.rst  linux.rst  python_sheet.rst
_doc/examples/: README.txt  lambda_function.py  plot_einstein_riddle.py  plot_float_and_double_rouding.py  plot_gil_example.py  plot_hypercube.py  plot_lambda_function.py  plot_matador.py  plot_numpy_tricks.py  plot_pandas_groupby.py  plot_partie_dame.py  plot_serialisation_examples.py  plot_serialisation_protobuf.py  plot_tarabiscote.py  plot_tsp.py
_doc/notebooks/: README.txt
_doc/practice/: algo.rst  algo101.rst  algocompose.rst  algorithm_culture.rst  exams.rst  index.rst  index_algo.rst  index_data.rst  index_exam.rst  index_ml.rst  index_python.rst  np_complet.rst  py.rst  pycheck.rst  pydata.rst  pystruct.rst  pytools.rst  tds101.rst
_doc/py/: i_expy.rst  index.rst
_latex/ensae/: package.tex  td_note_2006.py  td_note_2006.tex  td_note_2007.py  td_note_2008.py  td_note_2008.tex  td_note_2009.py  td_note_2009_rattrape.tex  td_note_2010.py  td_note_2010_rattrape.py  td_note_2010_rattrape.tex  td_note_2011.py  td_note_2011.tex  td_note_2012.py  td_note_2012.tex  td_note_2012_enonce.py  td_note_2013.py  td_note_2013_M.py  td_note_2013_exoM.tex  td_note_2013_exoS.tex  td_note_2013_novembre_2012_exoM.py  td_note_2013_novembre_2012_exoS.py  td_note_2013_preparation1.py  td_note_2013_preparation1b.py  td_note_2013_preparation1c.py  (+16 more)
_notebooks/: celine_pairs.csv  llm_example.ipynb
_todo/: chap1_introduction.tex  chap2_type.tex  chap3_syntaxe.tex  chap4_classe.tex  chap5_exception.tex  chap6_module.tex  chap7_fichiers.tex  chap8_interface.tex  chap9_thread.tex  chapn_tools.tex  conseil_ecrire_programme.tex  exemple.tex  license.tex  python_cours_biblio.tex  python_cours_titre.tex  resume_utile.tex
teachpyx/: __init__.py  ext_test_case.py
(+526 files in other folders)
